--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
 <div class="container">
-  <app-course-list></app-course-list>
+    <!-- fazendo o switch do componente de rotas -->
+    <router-outlet></router-outlet>
 </div>
